deployment run off!

--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,5 @@
+#!/bin/env bash
+
 #Application name
 APP_NAME="workflower"
 
@@ -7,7 +9,7 @@ BASE_REMOTE_PATH="/opt/aiworkflow"
 # Service Configuration (for deployment)
 SERVICE_USER="www-data"
 SERVICE_GROUP="www-data"
-SERVICE_DESCRIPTION="Suno Workflow Server"
+SERVICE_DESCRIPTION="Workflower Server"
 
 # Server Configuration
 SERVER_PORT=8080
@@ -16,7 +18,7 @@ BASE_URL=http://localhost:8080
 
 # OpenAI Configuration
 OPENAI_API_KEY=sk-your-openai-api-key-here
-OPENAI_MODEL=gpt-4o
+OPENAI_MODEL=gpt-5.2
 
 # Suno API Configuration
 SUNO_API_KEY=your-suno-api-key-here
