fixed suno client wiht suno-api and 2Captcha overcomer - WIP

--- a/.env_example
+++ b/.env_example
@@ -20,9 +20,25 @@ BASE_URL=http://localhost:8080
 OPENAI_API_KEY=sk-your-openai-api-key-here
 OPENAI_MODEL=gpt-5.2
 
-# Suno API Configuration
-SUNO_API_KEY=your-suno-api-key-here
-SUNO_BASE_URL=https://studio-api.suno.ai
+# Suno API Configuration (via suno-api server)
+# See lib/suno/README.md for detailed setup instructions
+# This should point to your running suno-api server (usually localhost)
+SUNO_BASE_URL=http://localhost:3000
+
+# suno-api Server Configuration (required for the suno-api server itself)
+# These variables are used by the suno-api Node.js server, not directly by workflower
+# Get your Suno cookie from suno.ai (see lib/suno/README.md)
+SUNO_COOKIE=your-suno-cookie-here
+
+# 2Captcha API key for solving hCaptcha challenges
+# Sign up at 2captcha.com or rucaptcha.com (Russia/Belarus)
+TWOCAPTCHA_KEY=your-2captcha-api-key-here
+
+# Browser configuration for suno-api server
+BROWSER=chromium
+BROWSER_GHOST_CURSOR=false
+BROWSER_LOCALE=en
+BROWSER_HEADLESS=true
 
 # Telegram Notifications (optional)
 TELEGRAM_BOT_TOKEN=your-telegram-bot-token
